--- a/Websites/fermiumlabs_com/_data/logger.yml
+++ b/Websites/fermiumlabs_com/_data/logger.yml
@@ -1,5 +1,5 @@
 title : "NNG Logger"
-cta : "Datacenter-grade diagnostics and Data Science for Industrial Analytics"
+cta : "The Datalogger physicists deserve "
 imgs :
   header   : "/Assets/img/projects/logger1.png"
   section1 : "/Assets/img/projects/logger2.png"
